upgrade node's padding-left

--- a/jquery.btree/demo.html
+++ b/jquery.btree/demo.html
@@ -7,6 +7,14 @@
 
   <script src="jquery-1.11.1.min.js" type="text/javascript"></script>
   <script src="jquery.btree.js" type="text/javascript"></script>
+
+  <style type="text/css">
+    #tree-container {
+      border: 1px solid #ececec;
+      margin: 30px;
+      padding: 2px;
+    }
+  </style>
 </head>
 <body>
 
@@ -21,7 +29,13 @@
       text: "智慧狮",
       isFolder: true,
       children: [
-        { pid: 2, isFolder: true, text: "产品研发中心", children: [] },
+        { pid: 2, isFolder: true, text: "产品研发中心",
+          children: [
+            { pid: 5, text: "产品部" },
+            { pid: 5, text: "技术部" },
+            { pid: 5, text: "革命部" },
+          ]
+        },
         { pid: 3, isFolder: true, text: "内容研发中心", children: [] },
         { pid: 4, isFolder: true, text: "德玛西亚", children: [] },
       ]
