--- a/jquery.btree/treeSelectbox.html
+++ b/jquery.btree/treeSelectbox.html
@@ -4,10 +4,10 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Tree Dropdown Demo</title>
 
-  <link rel="stylesheet" type="text/css" href="jquery.treedropdown.css">
+  <link rel="stylesheet" type="text/css" href="jquery.treeSelect.css">
 
   <script src="jquery-1.11.1.min.js" type="text/javascript"></script>
-  <script src="jquery.treedropdown.js" type="text/javascript"></script>
+  <script src="jquery.treeSelect.js" type="text/javascript"></script>
 
   <style type="text/css">
     input { width: 250px; }
@@ -16,9 +16,9 @@
 </head>
 <body>
 
-  <div>
-    <input role="as-tree-dropdown" ref="#tree-data">
-  </div>
+  <input role="as-tree-dropdown" ref="#tree-data">
+
+  <p>别推我下去啊！别别别别别别别别别别别别别推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！</p>
 
   <div id="tree-data" style="display:none;">
     [
@@ -36,7 +36,7 @@
   <script type="text/javascript">
   $(document).ready(function() {
 
-    $("input").treeDropdown()
+    $("input").treeSelect()
 
   });
   </script>
