--- a/jquery.btree/treeSelectbox.html
+++ b/jquery.btree/treeSelectbox.html
@@ -10,13 +10,15 @@
   <script src="jquery.treeSelect.js" type="text/javascript"></script>
 
   <style type="text/css">
-    input { width: 250px; }
+    input { width: 250px; border: 0; padding: 0; margin: 0; }
   </style>
 
 </head>
 <body>
 
-  <input role="as-tree-dropdown">
+  <span style="width:250px;">
+    <input role="as-tree-dropdown">
+  </span>
 
   <p>别推我下去啊！别别别别别别别别别别别别别推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！推我下去啊！</p>
 
